--- a/panda-5.ipynb
+++ b/panda-5.ipynb
@@ -41,6 +41,7 @@
     }
    ],
    "source": [
+    "# program to handle data using pandas\n",
     "import pandas as pd\n",
     "a=pd.read_csv('vt.csv')\n",
     "print(a)\n",
@@ -51,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
